--- a/css/main.css
+++ b/css/main.css
@@ -1221,7 +1221,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #7c26c9;
+    background: #ff28a7;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
